--- a/photocollection/package.json
+++ b/photocollection/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "flowhart",
+  "name": "photocollection",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
-    "react-d3-tree": "^1.13.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
